--- a/projects/operative-situation/src/index.html
+++ b/projects/operative-situation/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Оперативная обстановка</title>
+  <title>Оперативная обстановка 2020</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
