--- a/projects/control/src/index.html
+++ b/projects/control/src/index.html
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,500,600,700|Exo+2:300,400,500,600,700|Montserrat+Alternates:300,400,500,600,700,800|Montserrat:300,400,500,600,700,800|Noto+Sans|Open+Sans:300,400,600,700,800|Source+Sans+Pro:300,400,600,700&display=swap&subset=cyrillic" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
